Change the optimization arguments to use G1GC
Enables G1 garbage collector with string deduplication. This garbage collector is parallel, concurrent, and provides shorter and more consistent GC pause times. Reduces duration of GC pauses that hang the game, especially with large heap sizes. Haven't tested with Java 7, if it breaks, then remove the string deduplication argument.